--- a/demo.html
+++ b/demo.html
@@ -54,7 +54,7 @@
       <div class="jumbotron">
         <div class="container">
           <h1 class="display-3">Hello, Pixeledges,</h1>
-          <p>CloudFront serves content through a worldwide network of data centers called Edge Locations. Using edge servers to cache and serve content improves performance by providing content closer to where viewers are located.</p>        </div>
+          <p>CloudFront serves content through a worldwide network of data centers called Edges Locations. Using edge servers to cache and serve content improves performance by providing content closer to where viewers are located.</p>        </div>
       </div>
 
       <div class="container">
