--- a/demo.html
+++ b/demo.html
@@ -53,7 +53,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Hello, Pixeledge.,</h1>
+          <h1 class="display-3">Hello, Pixeledge,</h1>
           <p>CloudFront serves content through a worldwide network of data centers called Edges Locations. Using edge servers to cache and serve content improves performance by providing content closer to where viewers are located.</p>        </div>
       </div>
 
